--- a/posts/Expert Presentation/expert_blog_post.ipynb
+++ b/posts/Expert Presentation/expert_blog_post.ipynb
@@ -8,12 +8,11 @@
     "---\n",
     "title: \"Dallas\"\n",
     "description: \"Chino's expert post on dallas\"\n",
-    "author: \"Chinomso Anyadiegwu\"\n",
-    "date: \"2/12/2024\"\n",
+    "author: \"Chino Anyadiegwu\"\n",
+    "date: \"2/12/2025\"\n",
     "categories:\n",
     "  - LLMs\n",
-    "  - prompting\n",
-    "  - logic\n",
+    "  - Cities\n",
     "---"
    ]
   },
@@ -27,6 +26,9 @@
   }
  ],
  "metadata": {
+  "citation-manager": {
+   "items": {}
+  },
   "kernelspec": {
    "display_name": "Python 3-12 (COMM4190)",
    "language": "python",
