updates to blog

--- a/posts/000_superbowl_prediction/superbowl_prediction.ipynb
+++ b/posts/000_superbowl_prediction/superbowl_prediction.ipynb
@@ -6,14 +6,13 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"A test post\"\n",
-    "description: \"An example post from a Jupyter notebook\"\n",
+    "title: \"ChatGPT predicted the Eagles would win... and they did!\"\n",
+    "description: \"Go Birds!\"\n",
     "author: \"An LLM User\"\n",
     "date: \"2/2/2024\"\n",
     "categories:\n",
     "  - LLMs\n",
-    "  - prompting\n",
-    "  - logic\n",
+    "  - Current Trends\n",
     "---"
    ]
   },
