--- a/posts/009_ chatGOT/chatGOT.ipynb
+++ b/posts/009_ chatGOT/chatGOT.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "---\n",
     "title: \"ChatGOT\"\n",
-    "description: \"Testing ChatGPTs Ability to Switch Between AAVE, Cockney, and Gen-Z Lingo\"\n",
+    "description: \"ChatGPT Writes an imagined Season 9 Game of Thrones Novella!\"\n",
     "author: \"Chino Anyadiegwu\"\n",
-    "date: \"4/27/2025\"\n",
+    "date: \"4/28/2025\"\n",
     "categories:\n",
     "  - LLMs\n",
     "  - Television\n",
