--- a/posts/Expert Presentation/expert_blog_post.ipynb
+++ b/posts/Expert Presentation/expert_blog_post.ipynb
@@ -7,12 +7,10 @@
    "source": [
     "---\n",
     "title: \"Dallas\"\n",
-    "description: \"Chino's expert post on dallas\"\n",
+    "description: \"Chino's expert presentation on Dallas\"\n",
     "author: \"Chino Anyadiegwu\"\n",
     "date: \"2/12/2025\"\n",
     "categories:\n",
-    "  - LLMs\n",
-    "  - Cities\n",
     "---"
    ]
   },
