--- a/about.qmd
+++ b/about.qmd
@@ -1,8 +1,15 @@
 ---
 title: About
-image: profile.jpg
+image: profile.png
 about:
   template: jolla
 ---
 
-About this blog
+Hi, welcome to my blog! I’m Chinomso Anyadiegwu, a student at the University of Pennsylvania studying Philosophy, Politics, and Economics with minors in Data Science and Legal Studies. 
+
+On my blog I test interesting use cases and applications of AI. From superbowl predictions to planning vacations. All of my posts are broken down into the four main parts. 1) The experiment 2) Prompts and outputs between the user and the LLM 3) Observations + Key Takeaways 4) Why does this matter.
+
+Working on this blog pushed me to experiment with AI tools outside of just the way they function, but also how they shape ideas, storytelling, and ethics. If you have any questions feel free to email me!
+
+Email: chinoany@sas.upenn.edu
+
