--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 title: My Explorations with AI, LLMs, and more
 listing:
   contents: posts
-  sort: date asc
+  sort: date desc
   type: default
   categories: true
   sort-ui: false
